--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,8 +1,19 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
+
 body {
-  padding: 50px;
+  margin: 0;
+  padding: 0;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
-  color: #00B7FF;
+  color: #00b7ff;
+}
+
+.authform {
+  width: 40%;
+}
+
+.authErr {
+  text-align: center;
 }
