--- a/views/profile.pug
+++ b/views/profile.pug
@@ -1,6 +1,11 @@
 extends layout
+include mixins/_card
 block content
 
-  p This is Profile
+  .uk-section
+    .uk-container
+      <div class="uk-child-width-1-3@m uk-grid-small uk-grid-match" uk-grid>
+        each tatoo in tatoos
+          +card(tatoo)
 
   
