--- a/views/mixins/_card.pug
+++ b/views/mixins/_card.pug
@@ -1,12 +1,21 @@
 mixin card(tatoo)
-    .uk-card.uk-card-default.uk-card-body(class='uk-width-1-3@m')
+    
+    .uk-card.uk-card-default(class='uk-width-1-3@m')
       .uk-card-header
-        .uk-grid-small.uk-flex-middle(uk-grid='')
+        .uk-grid-small.uk-flex-middle.uk-margin(uk-grid='')
           .uk-width-expand
             h3.uk-card-title.uk-margin-remove-bottom #{tatoo.name}
             p.uk-text-meta.uk-margin-remove-top
               time(datetime=`${tatoo.updatedAt}`) Updated: #{help.formatDate(tatoo.updatedAt)}
       .uk-card-body
+        .uk-position-relative.uk-visible-toggle.uk-light(tabindex='-1', uk-slideshow='')
+          ul.uk-slideshow-items
+            each image in tatoo.images
+              li
+                img(src=image, alt='', uk-cover='')
+            
+          a.uk-position-center-left.uk-position-small.uk-hidden-hover(href='#', uk-slidenav-previous='', uk-slideshow-item='previous')
+          a.uk-position-center-right.uk-position-small.uk-hidden-hover(href='#', uk-slidenav-next='', uk-slideshow-item='next')
         p
           | #{tatoo.description}
       .uk-card-footer
