only for branch create purposes

--- a/views/mixins/_card.pug
+++ b/views/mixins/_card.pug
@@ -12,7 +12,8 @@ mixin card(tatoo)
           ul.uk-slideshow-items
             each image in tatoo.images
               li
-                img(src=image, alt='', uk-cover='')
+                .uk-cover-container
+                  img(src=image alt='' uk-cover)
             
           a.uk-position-center-left.uk-position-small.uk-hidden-hover(href='#', uk-slidenav-previous='', uk-slideshow-item='previous')
           a.uk-position-center-right.uk-position-small.uk-hidden-hover(href='#', uk-slidenav-next='', uk-slideshow-item='next')
