Pug for profile fixed

--- a/views/newTatoo.pug
+++ b/views/newTatoo.pug
@@ -31,6 +31,6 @@ block content
             textarea.uk-textarea(rows='5', placeholder='Short description for tatoo' name="description")
           .uk-margin(uk-margin='')
             div(uk-form-custom='target: true')
-              input(type='file' name="images" multiple uk-tooltip="You can add multiple images")
+              input(type='file' name="image"  uk-tooltip="Upload a single image")
               input.uk-input.uk-form-width-medium(type='text', placeholder='Select file(s)', disabled='')
         button.uk-button.uk-button-default Submit
