--- a/views/mixins/_card2.pug
+++ b/views/mixins/_card2.pug
@@ -1,13 +1,18 @@
-mixin card(tatoo)
-    
-    .uk-card.uk-card-default(class='uk-width-1-3@m')
+mixin card2(tatoo)
+  div
+    .uk-card.uk-card-default
       .uk-card-header
-        .uk-grid-small.uk-flex-middle.uk-margin(uk-grid='')
+        .uk-grid-small.uk-flex-middle(uk-grid='')
+          .uk-width-auto
           .uk-width-expand
             h3.uk-card-title.uk-margin-remove-bottom #{tatoo.name}
             p.uk-text-meta.uk-margin-remove-top
               time(datetime=`${tatoo.updatedAt}`) Updated: #{help.formatDate(tatoo.updatedAt)}
       .uk-card-body
+        div(uk-lightbox='')
+          a(href=tatoo.image)
+            .uk-height-medium.uk-flex.uk-flex-center.uk-flex-middle.uk-background-cover.uk-light(data-src=tatoo.image, uk-img='')
+              h1.tobehidden Background
         p
           | #{tatoo.description}
       .uk-card-footer
