--- a/views/profile.pug
+++ b/views/profile.pug
@@ -1,11 +1,11 @@
 extends layout
-include mixins/_card
+include mixins/_card2
 block content
 
   .uk-section
     .uk-container
-      <div class="uk-child-width-1-3@m uk-grid-small uk-grid-match" uk-grid>
+      .uk-grid-small.uk-grid-match(class='uk-child-width-1-3@m', uk-grid='')
         each tatoo in tatoos
-          +card(tatoo)
+          +card2(tatoo)
 
   
