--- a/views/profile.pug
+++ b/views/profile.pug
@@ -1,11 +1,11 @@
 extends layout
-include mixins/_card2
+include mixins/_card
 block content
 
   .uk-section
     .uk-container
       .uk-grid-small.uk-grid-match(class='uk-child-width-1-3@m', uk-grid='')
         each tatoo in tatoos
-          +card2(tatoo)
+          +card(tatoo)
 
   
