Edit in tatoos almost implemented

--- a/views/mixins/_card.pug
+++ b/views/mixins/_card.pug
@@ -8,7 +8,7 @@ mixin card(tatoo)
             div(class="tatoo-title-container")
               h3.uk-card-title.uk-margin-remove-bottom #{tatoo.name}
               div(class="tatoo-user-actions")
-                a(href='', uk-icon='pencil' ratio=0.9)
+                a(href=`/tatoo/edit/${tatoo._id}`, uk-icon='pencil' ratio=0.9)
                 a(href=`/tatoo/delete/${tatoo._id}`, uk-icon='trash'  ratio=0.9)
             p.uk-text-meta.uk-margin-remove-top
               time(datetime=`${tatoo.updatedAt}`) Updated: #{help.formatDate(tatoo.updatedAt)}
