Create new button in profile implemented and checkrole function added

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -33,4 +33,7 @@ a {
 .tatoo-user-actions a {
   padding-right: 3px; }
 
+.create-button-container {
+  margin: 2% 3% 0 3%; }
+
 /*# sourceMappingURL=style.css.map */
