--- a/views/profile.pug
+++ b/views/profile.pug
@@ -1,7 +1,9 @@
 extends layout
 include mixins/_card
 block content
-
+  .uk-flex.uk-flex-right
+    div.create-button-container
+      a(href="/tatoo/new" class="uk-button uk-button-primary") Create New Tatoo
   .uk-section
     .uk-container
       .uk-grid-small.uk-grid-match(class='uk-child-width-1-3@m', uk-grid='')
