--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -39,6 +39,15 @@ a {
   right: 30px;
 }
 
+.tatoo-author-card {
+  position: absolute;
+  right: 30px;
+}
+
+.tatoo-author-card h6 {
+  font-size: 1em;
+}
+
 .tatoo-user-actions a {
   padding-right: 3px;
 }
