--- a/views/mixins/_card.pug
+++ b/views/mixins/_card.pug
@@ -1,4 +1,4 @@
-mixin card(tatoo)
+mixin card(tatoo,fan)
   div
     .uk-card.uk-card-default
       .uk-card-header
@@ -7,9 +7,13 @@ mixin card(tatoo)
           .uk-width-expand
             div(class="tatoo-title-container")
               h3.uk-card-title.uk-margin-remove-bottom #{tatoo.name}
-              div(class="tatoo-user-actions")
-                a(href=`/tatoo/edit/${tatoo._id}`, uk-icon='pencil' ratio=0.9)
-                a(href=`/tatoo/delete/${tatoo._id}`, uk-icon='trash'  ratio=0.9)
+              if fan
+                div(class="tatoo-author-card")
+                  h6(uk-tooltip="Tatoo Artist Name") #{tatoo.authorArtist.username}
+              if !fan
+                div(class="tatoo-user-actions")
+                  a(href=`/tatoo/edit/${tatoo._id}`, uk-icon='pencil' ratio=0.9)
+                  a(href=`/tatoo/delete/${tatoo._id}`, uk-icon='trash'  ratio=0.9)
             p.uk-text-meta.uk-margin-remove-top
               time(datetime=`${tatoo.updatedAt}`) Updated: #{help.formatDate(tatoo.updatedAt)}
               p Price: #{tatoo.price.value} #{tatoo.price.currency}
@@ -22,5 +26,7 @@ mixin card(tatoo)
       .uk-card-footer.uk-flex-center           
         p.tatoo-description
           | #{tatoo.description}
-      //- .uk-card-footer Esto podra servir para la vista del comprador
-      //-   a.uk-button.uk-button-text(href='#') Read more
+      if fan
+        .uk-card-footer 
+          .uk-flex.uk-flex-center
+            <button class="uk-button uk-button-primary">Buy</button>
