--- a/views/profile-artist.pug
+++ b/views/profile-artist.pug
@@ -8,6 +8,6 @@ block content
     .uk-container
       .uk-grid-small.uk-grid-match(class='uk-child-width-1-3@m', uk-grid='')
         each tatoo in tatoos
-          +card(tatoo)
+          +card(tatoo,false)
 
   
