Buy flow finished

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -55,3 +55,21 @@ a {
 .create-button-container {
   margin: 2% 3% 0 3%;
 }
+
+.tatoo-property {
+  margin: 4%;
+  text-align: center;
+  font-size: 1.05em;
+}
+
+hr {
+  margin: 0;
+}
+
+.tatoo-card-buy-info {
+  padding: 1%;
+}
+
+.tatoo-card-buy-card {
+  margin-top: 3%;
+}
