--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -43,4 +43,18 @@ a {
 .create-button-container {
   margin: 2% 3% 0 3%; }
 
+.tatoo-property {
+  margin: 4%;
+  text-align: center;
+  font-size: 1.05em; }
+
+hr {
+  margin: 0; }
+
+.tatoo-card-buy-info {
+  padding: 1%; }
+
+.tatoo-card-buy-card {
+  margin-top: 3%; }
+
 /*# sourceMappingURL=style.css.map */
