--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -24,6 +24,10 @@ a {
   display: none;
 }
 
+.timepicker-seconds {
+  display: none !important;
+}
+
 .tatoo-title-container {
   display: flex;
   flex-flow: row;
@@ -72,4 +76,8 @@ hr {
 
 .tatoo-card-buy-card {
   margin-top: 3%;
+}
+
+.mylabel {
+  display: flex;
 }
