--- a/views/newTatoo.pug
+++ b/views/newTatoo.pug
@@ -22,11 +22,11 @@ block content
           .uk-margin
             label(class="uk-form-label" for="exec_time") Execution Time
             select.uk-select(name="exec_time")
-              option(value="1") 1 Hour
-              option(value="1.5") 1.5 Hours
-              option(value="2") 2.0 Hours
-              option(value="2.5") 2.5 Hours
-              option(value="3") 3 Hours
+              option(value=1) 1 Hour
+              option(value=1.5) 1.5 Hours
+              option(value=2) 2 Hours
+              option(value=2.5) 2.5 Hours
+              option(value=3) 3 Hours
           .uk-margin
             label(class="uk-form-label" for="size") Size
               select.uk-select(name="size")
