--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
 
 body {
-  margin: 0;
+  margin: 0 !important;
   padding: 0;
   box-sizing: border-box;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
