--- a/views/calendar.pug
+++ b/views/calendar.pug
@@ -26,6 +26,8 @@ html(lang="en")
       console.log(JSON.parse('!{eventsRender}'))
       var calendar = new FullCalendar.Calendar(calendarEl, {
       plugins: [ 'timeGrid' , 'interaction' , 'dayGrid'],
+      handleWindowResize: true,
+      height: 'parent',
       selectable: true,
       timeZone: 'UTC',
       defaultView: 'timeGridWeek',
@@ -68,19 +70,16 @@ html(lang="en")
       calendar.render();
         });
     style.
-      body {
-      margin: 40px 10px;
-      padding: 0;
-      font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
-      font-size: 14px;
-      }
       #calendar {
       max-width: 900px;
       margin: 0 auto;
       }
+      .calendar-container{
+       height: 600px;
+      }
   body
     include includes/navbar
-    .uk-section
+    .uk-section.calendar-container
       #calendar
 
     script(src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.2.0/js/uikit.min.js")
