--- a/views/calendar.pug
+++ b/views/calendar.pug
@@ -77,7 +77,7 @@ html(lang="en")
       .calendar-container{
        height: 600px;
       }
-  body
+  body.calendar
     include includes/navbar
     .uk-section.calendar-container
       #calendar
