--- a/views/includes/navbar.pug
+++ b/views/includes/navbar.pug
@@ -1,5 +1,7 @@
 nav.uk-navbar-container(uk-navbar='')
   .uk-navbar-left
+    //- a.uk-navbar-item.uk-logo(href='/') 
+    //-   img.logo(src="https://res.cloudinary.com/elwiiman/image/upload/v1571985836/landing/logo_gwxd7h.png", alt="")
     ul.uk-navbar-nav
       if user 
         li
