--- a/views/index.pug
+++ b/views/index.pug
@@ -42,7 +42,7 @@ block content
           h3.uk-card-title.card-info-title  Upload
           div
             img.info-img(src='https://res.cloudinary.com/elwiiman/image/upload/v1571963976/landing/upload_z5qz36.png', alt='')
-          p If your a tatoo artist, upload your designs, assign a price, execution time and another important details. 
+          p Upload your designs and details.
       div
         .uk-card.uk-info.uk-card-body
           div.number-img-container
@@ -50,7 +50,7 @@ block content
           h3.uk-card-title.card-info-title  Promote
           div
             img.info-img(src='https://res.cloudinary.com/elwiiman/image/upload/v1571964064/landing/promotion_dvk3p1.png', alt='')
-          p All the tatoos uploaded are going to be published in the application market
+          p All the tatoos uploaded are going to be published in the application market.
   .uk-section.info-sec2
     .uk-grid-small.uk-grid-match(class='uk-child-width-1-3@m', uk-grid='' uk-height-match="target: > div > .uk-card") 
       div
@@ -68,7 +68,7 @@ block content
           h3.uk-card-title.card-info-title  Schedule
           div
             img.info-img(src='https://res.cloudinary.com/elwiiman/image/upload/v1571964064/landing/event_cbtbnc.png', alt='')
-          p After you finish your purchase, schedule your appointment to get inked. 
+          p Finish your purchase and schedule your appointment. 
       div
         .uk-card.uk-info.uk-card-body
           div.number-img-container
